add_subdirectory(Timedata)
add_subdirectory(InterpolatingVector)
add_subdirectory(Exception)
add_subdirectory(Matrixhandler)
add_subdirectory(Mathfunctions)
add_subdirectory(Stochastics)
add_subdirectory(Coloroutput)
add_subdirectory(Misc)
add_subdirectory(Input_Output)
add_subdirectory(aux_json)
add_subdirectory(unit_conversion)
add_subdirectory(json_schema)
add_subdirectory(Randutils)
