add_library(ipoptwrapper STATIC Wrapper.cpp Adaptor.cpp ConstraintJacobian.cpp)
target_link_libraries(ipoptwrapper PUBLIC my_ipopt optimization_helpers timedata)
target_link_libraries(ipoptwrapper PRIVATE my_ipopt problemlayer networkproblem matrixhandler)
target_include_directories(ipoptwrapper PUBLIC include)
