add_library(constraintJacobian STATIC ConstraintJacobian.cpp)
target_link_libraries(constraintJacobian PUBLIC my_ipopt)
target_link_libraries(constraintJacobian PRIVATE exception)
target_include_directories(constraintJacobian PUBLIC include)


add_library(optimizer STATIC Implicit_Optimizer.cpp Initialvalues.cpp)
target_link_libraries(optimizer PUBLIC interpolatingVector constraintJacobian optimization_helpers)
target_link_libraries(optimizer PRIVATE componentclasses matrixhandler)
target_include_directories(optimizer PUBLIC include)

add_library(ipoptwrapper STATIC Wrapper.cpp Adaptor.cpp)
target_link_libraries(ipoptwrapper PUBLIC my_ipopt )
target_link_libraries(ipoptwrapper PRIVATE my_ipopt problemlayer optimizer)
target_include_directories(ipoptwrapper PUBLIC include)
