add_library(optimization_helpers STATIC
Optimization_helpers.cpp
ControlStateCache.cpp)

target_link_libraries(optimization_helpers PRIVATE
exception
networkproblem)

target_link_libraries(optimization_helpers PUBLIC
interpolatingVector
problemlayer)

target_include_directories(optimization_helpers PUBLIC include)
